feat: finalizado header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,35 @@
 </head>
 
 <body>
-    <div></div>
+    <header class="header container">
+
+        <div class="header-logo">
+            <img src="src/img/logo.png" alt="ZenSolutions" />
+        </div>
+        <nav class="menu-header">
+            <ul>
+                <li><a href="#" title="Soluções">Soluções</a></li>
+                <li><a href="#" title="A Zen">A Zen</a></li>
+                <li><a href="#" title="Projetos">Projetos</a></li>
+                <li><a href="#" title="Blog">Blog</a></li>
+                <li><a href="#" title="Contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="intro container">
+        <div class="intro-chamada">
+            <h1 class="titulo-secundario">Mudando o mundo,<br /> um código de<br /> cada vez</h1>
+            <p class="texto-normal">
+                Transformamos seus sonhos, suas ideias em realidade, com uma equipe altamente
+                qualificada e
+                pronta para te orientar e guiar para atingir o objetivo.
+            </p>
+            <a href="#" class="btn btn-primary">Ver Mais</a>
+        </div>
+        <div class="intro-personagem">
+            <img src="src/img/personagem_header.svg" alt="Vamos mudar o mundo!" />
+        </div>
+    </section>
 </body>
 
 </html>
