feat: removido arquivos que estavam errados

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <img src="src/img/personagem_header.svg" alt="Vamos mudar o mundo!" />
         </div>
     </section>
+    <section class="nossas-solucoes container">
+
+    </section>
 </body>
 
 </html>
