finalizando sessao projetos

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         </div>
         <nav class="menu-header">
             <ul>
-                <li><a href="#" title="Soluções">Soluções</a></li>
+                <li><a href="#solucoes" title="Soluções">Soluções</a></li>
                 <li><a href="#" title="A Zen">A Zen</a></li>
                 <li><a href="#" title="Projetos">Projetos</a></li>
+                <li><a href="#" title="Blog">Blog</a></li>
                 <li><a href="#" title="Contato">Contato</a></li>
             </ul>
         </nav>
@@ -33,11 +34,9 @@
             </p>
             <a href="#" class="btn btn-primary">Ver Mais</a>
         </div>
-        <div class="intro-personagem">
-            <img src="src/img/personagem_header.svg" alt="Vamos mudar o mundo!" />
-        </div>
+
     </section>
-    <section class="nossas-solucoes container">
+    <section id="#solucoes" class="nossas-solucoes container">
         <h2 class="titulo">Nossas</h2>
         <h3 class="titulo-secundario">Soluções</h3>
         <p class="estrofe-nossas-solucoes">Descubra o que nós podemos fazer para você e por você!</p>
@@ -69,6 +68,53 @@
                 </li>
             </ul>
         </div>
+    </section>
+    <section id="a-zencompany " class="sobre container">
+
+        <img src="src/img/poligono_sobre.svg" alt="Sobre A Zen" class="img-sobre">
+        <div class="texto-sobre">
+            <h2 class="titulo">Sobre</h2>
+            <h3 class="titulo-secundario">A Zen</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed mollis, odio sed ornare tristique, velit
+                tellus convallis eros, id feugiat velit elit eget arcu. In tempus sollicitudin consequat. Vivamus at
+                sodales urna. Suspendisse imperdiet, sapien nec aliquet sollicitudin, tellus neque viverra quam, sit
+                amet lacinia orci nisi ut nibh. Duis quam ex, eleifend sed lectus nec, tristique pretium tortor.
+                Aliquam ac dapibus magna. Vestibulum pretium, felis et elementum molestie, ligula magna laoreet dui,
+                quis mattis diam lectus id nunc. Aenean laoreet et ante non fermentum.</p>
+
+            <a href="#" class="btn btn-primary" title="Fale Conosco!">Fale conosco!</a>
+        </div>
+    </section>
+    <section id="projetos" class="projetos container">
+        <h2 class="titulo">Nossos</h2>
+        <h3 class="titulo-secundario">Projetos</h3>
+        <p class="estrofe-projetos">Conheça alguns dos nossos trabalhos!</p>
+        <ul>
+            <li>
+                <figure>
+                    <div class="overlay-projeto"> Fonte Cred</div>
+                    <img src="./src/img/projetos/projeto01.png" alt="Projeto 01" />
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <div class="overlay-projeto"> Ecidade</div>
+                    <img src="./src/img/projetos/projeto01.png" alt="Projeto 02" />
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <div class="overlay-projeto"> HubGLob </div>
+                    <img src="./src/img/projetos/projeto01.png" alt="Projeto 03" />
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <div class="overlay-projeto"> EAguas </div>
+                    <img src="./src/img/projetos/projeto01.png" alt="Projeto 04" />
+                </figure>
+            </li>
+        </ul>
     </section>
 </body>
 
