feat: finalizado listagem do blog

--- a/index.html
+++ b/index.html
@@ -115,7 +115,52 @@
                 </figure>
             </li>
         </ul>
+        <a href="#" class="btn btn-primary">Ver mais</a>
     </section>
+    <section id="blog" class="blog container">
+        <h2 class=" titulo">Blog</h2>
+        <p class="estrofe-blog">Fique dentro das ultimas atualizações!</p>
+        <ul>
+            <li>
+                <a href="#" title="Algoritmos e Programação Estruturada">
+                    <figure>
+                        <div class="overlay-blog">
+                            <p>Algoritmos e Programação Estruturada</p>
+                            <small>16/01/2021</small>
+                        </div>
+                        <img src="https://i.picsum.photos/id/675/257/151.jpg?hmac=89z7G36kSNnGcoONX5O7DllHhVS4Z4hWqDjIHK98g6k"
+                            alt="Algoritmos e Programação Estruturada" />
+                    </figure>
+                </a>
+            </li>
+            <li>
+                <a href="#" title="Análise e Modelagem de Sistemas">
+                    <figure>
+                        <div class="overlay-blog">
+                            <p>Análise e Modelagem de Sistemas</p>
+                            <small>16/01/2021</small>
+                        </div>
+                        <img src="https://i.picsum.photos/id/675/257/151.jpg?hmac=89z7G36kSNnGcoONX5O7DllHhVS4Z4hWqDjIHK98g6k"
+                            alt="Análise e Modelagem de Sistemas" />
+                    </figure>
+                </a>
+            </li>
+            </li>
+            <li>
+                <a href="#" title="Análise e Modelagem de Sistemas O Processo de Software">
+                    <figure>
+                        <div class="overlay-blog">
+                            <p>Análise e Modelagem de Sistemas O Processo de Software</p>
+                            <small>16/01/2021</small>
+                        </div>
+                        <img src="https://i.picsum.photos/id/675/257/151.jpg?hmac=89z7G36kSNnGcoONX5O7DllHhVS4Z4hWqDjIHK98g6k"
+                            alt="Análise e Modelagem de Sistemas O Processo de Software" />
+                    </figure>
+                </a>
+            </li>
+        </ul>
+    </section>
+
 </body>
 
 </html>
